Lógica de login

--- a/Ibvc.sln/Ibvc.UI/Pages/Conta/Login.razor
+++ b/Ibvc.sln/Ibvc.UI/Pages/Conta/Login.razor
@@ -2,18 +2,21 @@
 @layout ContaLayout
 
 @inject NavigationManager NavigationManager
+@inject IAuthService AuthService
 
 <EditForm Model="_loginRequest" OnValidSubmit="HandleLogin">
     <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
         <div class="sm:mx-auto sm:w-full sm:max-w-sm">
             <img src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=600"
                  alt="IBVC" class="mx-auto h-10 w-auto"/>
-            <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Bem-vindo!</h2>
+            <h2 class="mt-10 text-center text-2xl/9 md:text-3xl lg:text-4xl font-bold tracking-tight text-gray-900">
+                Bem-vindo!</h2>
         </div>
 
         <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm space-y-6">
             <div>
-                <label for="celular" class="block text-sm/6 font-medium text-gray-900">Celular</label>
+                <label for="celular" class="block text-sm/6 md:text-2xl lg:text-3xl font-medium text-gray-900">Seu
+                    celular</label>
                 <div class="mt-2">
                     <InputText @bind-Value="_loginRequest.Celular" id="celular" name="celular" required
                                class="@Classes.InputLogin"
@@ -23,8 +26,9 @@
 
             <div>
                 <div class="flex items-center justify-between">
-                    <label for="senha" class="block text-sm/6 font-medium text-gray-900">Senha</label>
-                    <div class="text-sm">
+                    <label for="senha" class="block text-sm/6 md:text-2xl lg:text-3xl font-medium text-gray-900">Sua
+                        senha</label>
+                    <div class="text-sm lg:text-lg">
                         <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Esqueceu a senha?</a>
                     </div>
                 </div>
@@ -36,6 +40,13 @@
                 </div>
             </div>
 
+            @if (!string.IsNullOrWhiteSpace(_loginErro))
+            {
+                <div class="text-red-600 text-sm md:text-lg lg:text-2xl mt-4 text-center">
+                    @_loginErro
+                </div>
+            }
+
             <div>
                 <button type="submit" class="@Classes.BtnLogin">Entrar</button>
             </div>
@@ -45,13 +56,35 @@
 
 @code {
     private readonly LoginRequest _loginRequest = new();
+    private string? _loginErro = string.Empty;
 
     private async Task HandleLogin()
     {
-        // Chamar o AuthService aqui — Exemplo:
-        // var resultado = await AuthService.LoginAsync(_loginRequest);
-        // if (resultado.Sucesso) { NavigationManager.NavigateTo("/dashboard"); }
-        Console.WriteLine($"Login enviado: {_loginRequest.Celular}, {_loginRequest.Senha}");
-    }
+        try
+        {
+            AuthResponse? resultado = await AuthService.LoginAsync(_loginRequest);
 
+            if (resultado is null)
+            {
+                _loginErro = "Erro inesperado ao tentar fazer login.";
+            }
+            else if (resultado.Message == "401")
+            {
+                _loginErro = "Usuário não cadastrado no sistema, por favor, contate a secretaria da igreja.";
+            }
+            else if (resultado.Message == "403")
+            {
+                _loginErro = "Senha incorreta, por favor, tente novamente.";
+            }
+            else
+            {
+                NavigationManager.NavigateTo("/home");
+            }
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine(ex);
+            throw;
+        }
+    }
 }
