--- a/Ibvc.sln/Ibvc.UI/_Imports.razor
+++ b/Ibvc.sln/Ibvc.UI/_Imports.razor
@@ -10,3 +10,5 @@
 @using Ibvc.UI.Layout
 @using Ibvc.Domain.DTOs.Requests
 @using Ibvc.UI.Themes
+@using Ibvc.Domain.Interfaces
+@using Ibvc.Domain.DTOs.Responses
