--- a/Ibvc.sln/Ibvc.UI/Pages/Conta/Login.razor
+++ b/Ibvc.sln/Ibvc.UI/Pages/Conta/Login.razor
@@ -62,24 +62,27 @@
     {
         try
         {
-            AuthResponse? resultado = await AuthService.LoginAsync(_loginRequest);
-
-            if (resultado is null)
-            {
-                _loginErro = "Erro inesperado ao tentar fazer login.";
-            }
-            else if (resultado.Message == "401")
-            {
-                _loginErro = "Usuário não cadastrado no sistema, por favor, contate a secretaria da igreja.";
-            }
-            else if (resultado.Message == "403")
-            {
-                _loginErro = "Senha incorreta, por favor, tente novamente.";
-            }
-            else
-            {
-                NavigationManager.NavigateTo("/home");
-            }
+            NavigationManager.NavigateTo("/home");
+            
+            // _loginErro = string.Empty;
+            //
+            // AuthResponse? resultado = await AuthService.LoginAsync(_loginRequest);
+            // if (resultado is null)
+            // {
+            //     _loginErro = "Erro inesperado ao tentar fazer login.";
+            // }
+            // else if (resultado.Message == "401")
+            // {
+            //     _loginErro = "Usuário não cadastrado no sistema, por favor, contate a secretaria da igreja.";
+            // }
+            // else if (resultado.Message == "403")
+            // {
+            //     _loginErro = "Senha incorreta, por favor, tente novamente.";
+            // }
+            // else
+            // {
+            //     NavigationManager.NavigateTo("/home");
+            // }
         }
         catch (Exception ex)
         {
