--- a/Ibvc.sln/Ibvc.UI/_Imports.razor
+++ b/Ibvc.sln/Ibvc.UI/_Imports.razor
@@ -12,3 +12,5 @@
 @using Ibvc.UI.Themes
 @using Ibvc.Domain.Interfaces
 @using Ibvc.Domain.DTOs.Responses
+@using Ibvc.Domain.DTOs.Enums
+@using Ibvc.Domain.Entities
