--- a/Ibvc.sln/Ibvc.UI/_Imports.razor
+++ b/Ibvc.sln/Ibvc.UI/_Imports.razor
@@ -14,3 +14,5 @@
 @using Ibvc.Domain.DTOs.Responses
 @using Ibvc.Domain.DTOs.Enums
 @using Ibvc.Domain.Entities
+@using Ibvc.UI.Utils.Formatters
+@using Ibvc.UI.Shared
