--- a/Ibvc.sln/Ibvc.UI/_Imports.razor
+++ b/Ibvc.sln/Ibvc.UI/_Imports.razor
@@ -16,3 +16,6 @@
 @using Ibvc.Domain.Entities
 @using Ibvc.UI.Utils.Formatters
 @using Ibvc.UI.Shared
+@using System.Linq.Expressions
+@using Ibvc.Domain.Mappers
+@using Ibvc.Domain.DTOs.Requests.Secretaria.Membros
