Tentando resolver navigation errado

--- a/Ibvc.sln/Ibvc.UI/Pages/Conta/Login.razor
+++ b/Ibvc.sln/Ibvc.UI/Pages/Conta/Login.razor
@@ -10,7 +10,7 @@
             <img src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=600"
                  alt="IBVC" class="mx-auto h-10 w-auto"/>
             <h2 class="mt-10 text-center text-2xl/9 md:text-3xl font-bold tracking-tight text-gray-300">
-                Bem-vindo!</h2>
+                Bem-vindo! - IGREJA BATISTA ENVIADA</h2>
         </div>
 
         <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm space-y-6">
@@ -81,7 +81,7 @@
             }
             else
             {
-                NavigationManager.NavigateTo("/home");
+                NavigationManager.NavigateTo("home");
             }
         }
         catch (Exception ex)
