--- a/Ibvc.sln/Ibvc.UI/Pages/Conta/Login.razor
+++ b/Ibvc.sln/Ibvc.UI/Pages/Conta/Login.razor
@@ -81,7 +81,7 @@
             }
             else
             {
-                NavigationManager.NavigateTo("home");
+                NavigationManager.NavigateTo("Ibvc/home");
             }
         }
         catch (Exception ex)
